So far progress on this work

--- a/tex.tex
+++ b/tex.tex
@@ -4,7 +4,7 @@
 %All credit goes towards Dr. Adam Kapelner for providing the preamble and homework template.
 
 \newtoggle{professormode}
-\toggletrue{professormode} %STUDENTS: DELETE or COMMENT this line
+
 
 
 
@@ -44,50 +44,56 @@ NAME:  \line(1,0){380}
 
 \easysubproblem{ What is a \textit{model}?
 }
-\newline \newline  A model 
-\vspace{30mm}
+\vspace{5mm}
+\newline \newline A model is just an approximation to reality. 
+\vspace{5mm}
 
 \intermediatesubproblem{Give an example of a model (preferably one that was not discussed in class) and explain why this is a model.}
-
-
-\vspace{30mm}
+\vspace{5mm}
+\newline \newline An example of a model that we did not discuss in class is a cart, which models a real-life car. Even though it doesn't perfectly simulate a car, a cart is considered a model since we can use it as a reference to an actual car. We can also use simulations to make predictions about certain aspects of actual cars, such as their speed.
+\vspace{5mm}
 
 \intermediatesubproblem{George Box stated that \qu{All models are wrong \ldots}. If all models are wrong, then why do we study models?}
+\vspace{5mm}
+\newline \newline Even if all models are wrong, we can still make predictions, test hypotheses, and improve decision-making, even though they are never perfect. Models can evolve and become more accurate and useful for scientific and experimental use. 
 
-\vspace{30mm}
-
+\vspace{5mm}
 \easysubproblem{ What are the two goals of modeling? }
-
-\vspace{30mm}
+\newline \newline The two goals of modeling are prediction and explanation.  
+\vspace{10mm}
 
 \easysubproblem{Suppose there is some phenomenon that we wish to model. Do we usually know all of the inputs or drivers of this phenomenon? }
-
-\vspace{30mm}
+\newline \newline No, we don't know all the inputs or drivers of this phenomenon, because they may be difficult or impossible to measure accurately.
+\vspace{5mm}
 
 \easysubproblem{In class, we stated that finding a function or a model can be difficult and that recent advancements in artificial intelligence, particularly machine learning, can help us. What is artificial intelligence? }
+\newline \newline Artificial intelligence is a term that refers to the general ability of computers to emulate human thoughts and use human intelligence to perform tasks. 
+\vspace{5mm}
 
-\vspace{40mm}
-
-
-\easysubproblem{In class, we stated that finding a function or a model can be difficult and that recent advancements in artificial intelligence, particularly machine learning, can help us. What is machine learning? (Use the most recent definition we discussed in class). }
-
-\vspace{50mm}
+\easysubproblem{In class, we stated that finding a function or a model can be difficult and that recent advancements in artificial intelligence, particularly machine learning, can help us. What is machine learning? (Use the most recent definition we discussed in class). } 
+\newline \newline
+Machine learning is used to train a piece of software to make useful predictions to generate content from data and to learn and improve their performance over time. 
+\vspace{5mm} 
 
 \easysubproblem{Read the section called \textit{History} on this page: \url{https://en.wikipedia.org/wiki/Machine_learning}. What was one of the first machine learning models?}
-
-\vspace{40mm}
+\newline \newline 
+The first machine learning model is called \textcolor{red}{'Computer Checkers'}. 
+\vspace{5mm}
 
 \easysubproblem{Read the section called \textit{History} on this page: \url{https://en.wikipedia.org/wiki/Machine_learning}. How did Tom Mitchell define machine learning?}
-
-\vspace{50mm}
+\newline \newline 
+Tom Mitchell defines machine learning by saying that the program performance \textcolor{purple} {(p)} on task \textcolor{orange} {(t)} as measured by \textcolor{purple} {p}, improves with experience \textcolor{green}{(e)}. This also means that the machine is like a baby and needs to be taught step by step as the baby goes through its task. And improves and learns every time the baby makes mistakes.
+\vspace{5mm}
 
 \easysubproblem{True or False? All of artificial intelligence falls under machine learning.}
-
-\vspace{10mm}
-
+\newline \newline 
+False!
+\vspace{5mm}
 
 \easysubproblem{True or False? All of machine learning falls under artificial intelligence.}
-\vspace{10mm}
+\newline \newline
+True!
+
 \end{enumerate}
 
 
@@ -96,7 +102,7 @@ NAME:  \line(1,0){380}
 
 \begin{enumerate}
 
-\easysubproblem{Suppose we have a bunch of data points $(x_1, y_1), (x_2, y_2), \ldots (x_n, y_n),$ and we wish to use a linear model to predict the value of $y$. What parameters (or values) are we looking to find?}
+\easysubproblem{Suppose we have a bunch of data points $(x_1, y_1), (x_2, y_2), \ldots, (x_n, y_n),$ and we wish to use a linear model to predict the value of $y$. What parameters (or values) are we looking to find?}
 
 \vspace{30mm}
 
