--- a/HW1.tex
+++ b/HW1.tex
@@ -7,6 +7,7 @@
 
 
 
+
 \title{MATH 245 Spring \the\year~ Homework \#1}
 
 \author{Steven Ou} %STUDENTS: write your name here
@@ -102,24 +103,26 @@ True!
 \begin{enumerate}
 
 \easysubproblem{Suppose we have a bunch of data points $(x_1, y_1), (x_2, y_2), \ldots, (x_n, y_n),$ and we wish to use a linear model to predict the value of $y$. What parameters (or values) are we looking to find?}
-
-\vspace{30mm}
+\newline \newline 
+The parameters that we're looking to find are the slope (m) and the intercept (b) in the equation $\hat{y}=mx+b.$
+\vspace{5mm}
 
 \easysubproblem{In order to find these parameters, we have to define a cost function. How many dimensions would be required to graph the cost function?}
+\newline \newline 
+Graphing the cost function would require at least three dimensions because it depends on m and b and the cost value (c). 
 
-
-\vspace{30mm}
-
+\vspace{5mm}
 
 \easysubproblem{Once we have our cost function, what exactly are we looking to do with this function? What is our primary objective?}
-
-\newpage
-
+\newline \newline
+What we want to do with the cost function is find the values of m and b that yield the lowest cost. Our primary objective is to obtain the best-fitting model. 
+\vspace{5mm}
 
 \easysubproblem{Explain how a machine can use the cost function to learn better values for our parameters. A full answer would outline the algorithm being used for the computer/machine to learn.}
+\newline \newline 
+A machine can 
 
-
-\vspace{140mm}
+\vspace{5mm}
 
 
 \intermediatesubproblem{Using your answer above, explain what it means when we say the machine is learning?}
