--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -9,7 +9,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def gradientDescent(gradient, start=0, rate =1, iterations =100):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
