--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -3,15 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def gradientDescent(gradient, start=0, rate =1, iterations =100):\n",
-    "    "
+    "    x_old = start"
    ]
   }
  ],
