--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "def gradientDescent(gradient, start=0, rate =1, iterations =100):\n",
-    "    x_old = start"
+    "    x_old = start\n",
+    "    for i in range(iteration):"
    ]
   }
  ],
