--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "def gradientDescent(gradient, start=0, rate =1, iterations =500):\n",
     "    x_old = start\n",
-    "    for i in range(iteration):"
+    "    for i in range(iterations):\n",
+    "        "
    ]
   }
  ],
