--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -9,7 +9,7 @@
     "def gradientDescent(gradient, start=0, rate =1, iterations =500):\n",
     "    x_old = start\n",
     "    for i in range(iterations):\n",
-    "        "
+    "        x_new = x_old -rate * gradient(x_old)"
    ]
   }
  ],
