--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -11,7 +11,8 @@
     "    for i in range(iterations):\n",
     "        x_new = x_old -rate * gradient(x_old)\n",
     "        if(x_new ==  x_old):\n",
-    "            "
+    "            break \n",
+    "        x_old = x_new"
    ]
   }
  ],
