--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -12,7 +12,17 @@
     "        x_new = x_old -rate * gradient(x_old)\n",
     "        if(x_new ==  x_old):\n",
     "            break \n",
-    "        x_old = x_new"
+    "        x_old = x_new\n",
+    "    return x_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def "
    ]
   }
  ],
