returning the function

--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradientDescent(gradient, start=0, rate =1, iterations =500):\n",
+    "def gradientDescent(gradient, start=0, rate =1, iterations =100):\n",
     "    x_old = start\n",
     "    for i in range(iterations):\n",
     "        x_new = x_old -rate * gradient(x_old)\n",
@@ -24,6 +24,15 @@
    "source": [
     "def g(x):\n",
     "    return 4*x**3 + 3*x**2 - 4*x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gradientDescent(g,1,0.1,500)"
    ]
   }
  ],
