--- a/HW1.tex
+++ b/HW1.tex
@@ -291,7 +291,7 @@ It would've converged to a number that is smaller than -1.
 \vspace{5mm}
 
 \intermediatesubproblem{Do you think that in using gradient descent the starting point matters?}
-
+Yes, when using gradient descent the starting point matters because if you use 0 it will go nowhere and will remain at 0. 
 \end{enumerate}
 
 
