--- a/HW2.tex
+++ b/HW2.tex
@@ -28,6 +28,7 @@
 }
 \vspace{5mm}
 \\
+We need training data 
 \intermediatesubproblem{Suppose given our training data, we selected a model that requires parameters. For instance, in the linear regression case, we required parameters $m$ and $b$ while in the neural network case, we required hundreds of parameters for our weights and biases. Why do we think of these parameters as ``controlling knobs''?}
 
 \vspace{5mm}
