--- a/HW2.tex
+++ b/HW2.tex
@@ -45,7 +45,7 @@ We can determine which direction to turn these knobs so we can adjust parameters
 
 \intermediatesubproblem{Explain what is meant by the perceptron. A good answer would discuss what the inputs and outputs are.}
 \\\\ 
-Perceptron is a neural network model that takes multiple inputs, it also produces binary numbers based on the inputs. The input could be represented as a vector $x=x_1,x_2,...,x_n$. These inputs correspond to a characteristic of the result data with 0 if the inputs are not something/choices you wanted to make or do, and 1 if the inputs are something/choices you wanted to make or to do. 
+Perceptron is a neural network model that takes multiple inputs, it also produces binary numbers based on the inputs. The input could be represented as a vector $x=x_1,x_2,...,x_n$. These inputs correspond to a characteristic of the result data with 0 if the inputs are not something/choices you wanted to make or do, and 1 if the inputs are something/choices you wanted to make or to do. The weights of each input $x_i$ are associated with a weight $w_i$. 
 \vspace{5mm}
 
 \intermediatesubproblem{In the perceptron, what function do we use to compute the output?}
