--- a/HW2.tex
+++ b/HW2.tex
@@ -45,7 +45,7 @@ We can determine which direction to turn these knobs so we can adjust parameters
 
 \intermediatesubproblem{Explain what is meant by the perceptron. A good answer would discuss what the inputs and outputs are.}
 \\\\ 
-Perceptron is a neural network model that takes multiple inputs, it also produces binary numbers based on the inputs. The input could be represented as a vector $x=x_1,x_2,...,x_n$. These inputs correspond to a characteristic of the result data with 0 if the inputs are not something/choices you wanted to make or do, and 1 if the inputs are something/choices you wanted to make or to do. The weights of each input $x_i$ are associated with a weight $w_i$. The weight determines the importance of each input. The perceptron also has a bias $b$, which is a threshold for the model to shift the condition of the final choice. 
+Perceptron is a neural network model that takes multiple inputs, it also produces binary numbers based on the inputs. The input could be represented as a vector $x=x_1,x_2,...,x_n$. These inputs correspond to a characteristic of the result data with 0 if the inputs are not something/choices you wanted to make or do, and 1 if the inputs are something/choices you wanted to make or to do. The weights of each input $x_i$ are associated with a weight $w_i$. The weight determines the importance of each input. The perceptron also has a bias $b$, which is a threshold for the model to shift the condition of the final choice. The perceptron computes a weighted summation of the inputs, including the bias using the formula: $z = \sum_{i=1}^{n}{w_ix_i +b}$. 
 \vspace{5mm}
 
 \intermediatesubproblem{In the perceptron, what function do we use to compute the output?}
